--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body, html {
   #root {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
   }
   
   .App {
